--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "zod": "^4.1.12",
     "zod-to-json-schema": "^3.25.0"
